# CapGraph

./: Makefile  README.md  pyproject.toml
src/: context.py
src/app/: app.py
src/engine/: api.py  runner.py  utils.py
src/engine/tools/: __init__.py  done.py  navigate.py
src/llm/: api.py  ollama_impl.py  validation.py
src/sample/: json_patch.py  json_schema.py  schematics.py  utils.py
src/sample/__schemas__/: base.schema.json  field.schema.json  form.schema.json  root.schema.json
src/sample/domain/: api.py  diff.py
src/sample/tools/: __init__.py  add_field.py  add_form.py
src/utils/: json_patch.py
tests/__stubs__/: schematics.json
tests/app/: test_e2e.py
tests/engine/: test_runner.py  test_state.py  test_translation.py
tests/llm/: test_ollama.py
tests/sample/: test_json_patch.py  test_json_schema.py  test_schematics.py
tests/utils/: test_json_patch.py
